--- a/client/styles/sass/_default.scss
+++ b/client/styles/sass/_default.scss
@@ -51,6 +51,8 @@ button:hover {
       border-bottom: 5px solid rgb(211, 45, 39);
       padding: 0.3em;
       border-top: 5px solid rgb(211, 45, 39);
+      margin-top: 0.2em;
+      border-radius: 0.5em;
     }
     
     & > * {
@@ -64,6 +66,7 @@ button:hover {
 
       &:hover {
         font-size: 0.74em;
+        cursor: pointer;
       }
     }
 
@@ -81,7 +84,8 @@ button:hover {
 #footer {
   text-align: center;
   height: 2.3em;
-  background-color: cadetblue;
+  background-color: #3e3d3d;
+  color: white;
   width: 100%;
   z-index: 200;
   margin-top: 4em;
